less: Better spacing of posts with images and fix image click edge detection

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -23,7 +23,7 @@ article {
 		font-size: smaller;
 	}
 	blockquote {
-		min-width: 15em;
+		min-width: 25em;
 		b {
 			color: inherit;
 		}
@@ -95,9 +95,13 @@ figcaption {
 figure {
 	margin: 0;
 	float: left;
+	margin: 3px 20px 0 0;
+	padding: 0.3em;
+	a {
+		display: block;
+	}
 	img {
 		border: 0;
-		margin: 3px 20px 0 0;
 	}
 }
 
